# Roars_valgdata

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  Valgresultat 2025👍 (Svar) - Fasit.csv  Valgresultat 2025👍 (Svar) - Skjemasvar 1.csv  Valgresultat 2025👍 (Svar) - Skjemasvar.csv  analyse_data.ipynb  analyse_data.nbconvert.ipynb  changes.md  explanations.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_analysis.py  setup.cfg  setup.py  sitecustomize.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: example_run.py  index.md
scripts/: run_analysis.py
src/: __init__.py  bias_analysis.py  clustering.py  config.py  data_loader.py  error_analysis.py  main.py  visualization.py
src/valgdata/: __init__.py  analysis.py  io.py
tests/: test_analysis.py  test_io.py
