[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "valgdata"
version = "0.1.0"
description = "Small data analysis helpers extracted from Roars_valgdata"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas>=1.0",
]

[project.authors]
name = "Copilot"
